# VINS-Fusion

./: .gitignore  CMakeLists.txt  gps.sh  kitti.sh  run.sh
config/A3_ptgrey/: a3_ptgrey_mono_imu_config.yaml  a3_ptgrey_stereo_imu_config.yaml  a3_ptgrey_stereo_imu_config_backup.yaml  left.yaml  right.yaml
config/euroc/: cam0_mei.yaml  cam0_pinhole.yaml  cam1_mei.yaml  cam1_pinhole.yaml  euroc_mono_imu_config.yaml  euroc_stereo_imu_config.yaml
config/kitti_odom/: cam03.yaml  cam04-12.yaml  kitti_config00-02.yaml  kitti_config03.yaml  kitti_config04-12.yaml  kitti_config13-21.yaml
config/kitti_raw/: cam_09_30.yaml  cam_10_03.yaml  kitti_09_30_config.yaml  kitti_10_03_config.yaml
config/mynteye/: left_mei.yaml  mynteye_mono_imu_config.yaml  mynteye_stereo_imu_config.yaml  right_mei.yaml
config/mytest/: color_camera.yaml  d435i_color.yaml
config/realsense_d435i/: left.yaml  realsense_stereo_imu_config.yaml
config/simulation/: cam0_mei.yaml  cam1_mei.yaml  simulation_config.yaml
config/vi_car/: cam0_mei.yaml  cam0_pinhole.yaml  cam1_mei.yaml  cam1_pinhole.yaml  vi_car.yaml
debug/debugIMU/: debugIMU.txt  debugIMU1.txt  debugIMU10.txt  debugIMU100.txt  debugIMU101.txt  debugIMU102.txt  debugIMU103.txt  debugIMU104.txt  debugIMU105.txt  debugIMU106.txt  debugIMU107.txt  debugIMU108.txt  debugIMU109.txt  debugIMU11.txt  debugIMU110.txt  debugIMU111.txt  debugIMU112.txt  debugIMU113.txt  debugIMU12.txt  debugIMU13.txt  debugIMU14.txt  debugIMU15.txt  debugIMU16.txt  debugIMU17.txt  debugIMU18.txt  debugIMU19.txt  debugIMU2.txt  debugIMU20.txt  debugIMU21.txt  debugIMU22.txt  debugIMU23.txt  debugIMU24.txt  debugIMU25.txt  debugIMU26.txt  debugIMU27.txt  debugIMU28.txt  debugIMU29.txt  debugIMU3.txt  debugIMU30.txt  debugIMU31.txt  (+74 more)
global_fusion/src/: globalOptNode.cpp
loop_fusion/src/: pose_graph_node.cpp
result/: vio.txt
vins_estimator/: CMakeLists.txt
vins_estimator/include/: System.h  estimator.h  feature_manager.h  feature_tracker.h  parameters.h
vins_estimator/include/camodocal/camera_models/: CameraFactory.h
vins_estimator/launch/: gps.launch  run_vins_fusion.launch
vins_estimator/src/: KITTIGPSTest.cpp  KITTIOdomTest.cpp  System.cpp  TestEuroc.cpp  rosNodeTest.cpp  rosNodeTestinSim.cpp  run_in_sim.cpp
vins_estimator/src/camera_models/calib/: CameraCalibration.cc
vins_estimator/src/camera_models/camera_models/: CameraFactory.cc  CataCamera.cc  CostFunctionFactory.cc  EquidistantCamera.cc  PinholeCamera.cc  PinholeFullCamera.cc  ScaramuzzaCamera.cc
vins_estimator/src/camera_models/chessboard/: Chessboard.cc
vins_estimator/src/estimator/: estimator.cpp  feature_manager.cpp  parameters.cpp
vins_estimator/src/factor/: imu_factor.h  initial_bias_factor.h  initial_pose_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  projectionOneFrameTwoCamFactor.h  projectionTwoFrameOneCamFactor.h  projectionTwoFrameTwoCamFactor.h  projection_factor.h
vins_estimator/src/featureTracker/: feature_tracker.cpp
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
